fixed spacing for the 2x2 column pattern and the 5 column pattern

--- a/resources/assets/js/gutenberg/editor-style.scss
+++ b/resources/assets/js/gutenberg/editor-style.scss
@@ -64,6 +64,21 @@ h1.is-style-Highlighted, h2.is-style-Highlighted, h3.is-style-Highlighted, h4.is
 		margin: 0px 5px;
 	}	
 }
+.wp-block-columns {
+	.four-image-bottom, .four-image-top {
+		margin: 0px;
+	}
+	&.five-column-three {
+		flex-direction: row;
+		flex-wrap: wrap;
+		flex-grow: 0;
+		justify-content: center;
+		.wp-block-column {
+			min-width: 30%;
+			flex-grow: 0;
+		}
+	}
+}
 .wp-block-button {
 	margin: 20px 0px 10px 0px;
 }
@@ -88,9 +103,12 @@ h1.is-style-Highlighted, h2.is-style-Highlighted, h3.is-style-Highlighted, h4.is
 		font-family: $alt-header-font;
 		font-size: 2.2em;
 		font-weight: 800;
-		padding: 27px 22px;
+		padding: 10px 30px;
 		line-height: 1.1;
 		color: $white;
+		min-height: 80px;
+		display: flex;
+		align-items: center;
 	}
 	&__content {	
 		position: absolute;
@@ -160,7 +178,8 @@ h1.is-style-Highlighted, h2.is-style-Highlighted, h3.is-style-Highlighted, h4.is
 }
 .wp-block-willamette-blocks-image-box.alignfull img{
 	@include screen-px(782){
-		min-height: 500px;
+		height: auto;
+		min-height: 400px;
 		width: auto;
 		object-fit: cover;
 	}
